--- a/Sprint09.ipynb
+++ b/Sprint09.ipynb
@@ -106,6 +106,48 @@
     "\n",
     "#, \"released\": {\"$regexp\": \"^1914-01\"}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# si volguéssim fer una modificació d'algun registre a alguna col·lecció, hauríem de fer el següent:\n",
+    "db.clients.update({Age: 35}, {$set: {Age:42}})\n",
+    "\n",
+    "# en canvi per suprimir algun registre, hauríem de procedir de la següent manera:\n",
+    "db.clients.deleteOne({Name: \"John Wick\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies = db[\"theaters\"].find({\"location.address.state\": \"CA\"})\n",
+    "\n",
+    "for movie in movies:\n",
+    "    print(movie[\"title\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#SprintITA09\n",
+    "\n",
+    "#Compass\n",
+    "#mongodb+srv://albertbatlle:SprintITA09@clusters901.abpvhrs.mongodb.net/\n",
+    "\n",
+    "# SHELL\n",
+    "#mongosh \"mongodb+srv://clusters901.abpvhrs.mongodb.net/\" --apiVersion 1 --username albertbatlle --password SprintITA09\n",
+    "\n",
+    "#https://www.youtube.com/playlist?list=PLXXiznRYETLcJE_4U9qN2pysZOSYyL4Mh"
+   ]
   }
  ],
  "metadata": {
